# undollar

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Gemfile  README.md  flake.nix  undollar.rb
.github/workflows/: main.yml  nix.yml
completions/bash/: $
completions/zsh/: _$
test/: undollar.bats
